Finished the footer

--- a/main.html
+++ b/main.html
@@ -76,13 +76,13 @@
                     <li id="navbar-list-item">
                         <div class="navbar-side-menu">
                             <a href="#">
-                                <span class="icon hide-text business">Lucru</span>
+                                <span class="icon hide-text business">Realitatea TV</span>
                             </a>
                             <a href="#">
-                                <span class="icon hide-text money">Economie</span>
+                                <span class="icon hide-text money">Curs Valutar</span>
                             </a>
                             <a href="#">
-                                <span class="icon hide-text daily">Zilnic</span>
+                                <span class="icon hide-text daily">Vremea</span>
                             </a>
                             
                             <span>|</span>
@@ -187,7 +187,48 @@
                 </div>
             </div>
         </div>
-    </section>
 
+        <div class="row flex-row">
+            <div class="addblock col-10">
+                <img src="images/add2.png" alt="IKEA add.">
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="row flex-row">
+            <div class="col-10 flex-row">
+                <div id="search-panel">Search <span class="icon search-icon"></span></div>
+            </div>
+        </div>
+        <div class="row flex-row">
+            <div class="col-10 navbar">
+                <ul>
+                    <li><a href="#">Actualitate</a></li>
+                    <li><a href="#">Alegeri</a></li>
+                    <li><a href="#">Politica</a></li>
+                    <li><a href="#">Societate</a></li>
+                    <li><a href="#">Economie</a></li>
+                    <li><a href="#">In lume</a></li>
+                    <li><a href="#">Life</a></li>
+                    <li><a href="#">Auto</a></li>
+                    <li><a href="#">Tech</a></li>
+                    <li><a href="#">Sport</a></li>
+                    <li><a href="#">Toate stirile</a></li>
+                    <li><a href="#">Realitatea TV</a></li>
+                    <li><a href="#">Curs Valutar</a></li>
+                    <li><a href="#">Vremea</a></li>
+                    <li><a href="#">Live</a></li>
+                    <li><a href="#">Contacte</a></li>
+                    <li><a href="#">Cariere</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row flex-row">
+            <div class="col-8 copyright-text">
+                 Mollit reprehenderit sunt dolore est ex commodo mollit. Enim ullamco magna quis minim dolore veniam in. 
+                 Sunt culpa ullamco reprehenderit ut mollit ut minim. Sint quis dolor fugiat et.
+            </div>
+        </div>
+    </footer>
   </body>
 </html>
