Added search bar functionality

--- a/main.html
+++ b/main.html
@@ -43,10 +43,8 @@
             <div class="col-3 right-header-menu">
                 <ul>
                     <li>
-                        <div class="search-field" href="#">
-                            Search
-                            <span class="icon search-icon"></span>
-                        </div>
+                        <input type="search" name="header-search" class="search-field"  id="header-search" placeholder="Search">
+                        <button class="icon search-icon"></button>
                     </li>
                     <li><a href="#">Contacts</a></li>
                     <li><a href="#">Cariere</a></li>
@@ -197,7 +195,10 @@
     <footer>
         <div class="row flex-row">
             <div class="col-10 flex-row">
-                <div id="search-panel">Search <span class="icon search-icon"></span></div>
+                <div class="search-box">
+                    <input type="search" name="search-panel" class="search-field"  id="search-panel" placeholder="Search">
+                    <button class="icon search-icon"></button>
+                </div>
             </div>
         </div>
         <div class="row flex-row">
