Modified adblocks to link to a website and created a closing mecanism

--- a/main.html
+++ b/main.html
@@ -21,8 +21,11 @@
   <body>
     <header>
         <div class="row flex-row">
-            <div class="addblock col-10">
-                <img src="images/add1.png" alt="Mercedes Car add.">
+            <div class="adblock col-10">
+                <a href="https://www.mercedes-benz.md/ro/desktop/home.html">
+                    <img src="images/add1.png" alt="Mercedes Car add.">
+                </a>
+                <span class="close-icon icon"></span>
             </div>
         </div>
         <div class="row flex-row">
@@ -99,24 +102,32 @@
         <div class="row flex-row breaking-news-banner-row">
             <div class="col-10 breaking-news-banner">
                 <img id="breaking-news-text-image" src="images/breaking_news.png" alt="Breaking news">
-                <img id="breaking-news-image" src="images/emergencyNewsImg.png" alt="Breaking news image">
-                <div id="breaking-news-text"> CNESP urmează să decidă astăzi dacă interzice zborurile din Marea Britanie</div>
+                <a href="#">
+                    <img id="breaking-news-image" src="images/emergencyNewsImg.png" alt="Breaking news image">
+                    <div id="breaking-news-text"> CNESP urmează să decidă astăzi dacă interzice zborurile din Marea Britanie</div>
+                </a>
                 <span id="breaking-news-pretend-timer" class="icon"></span>
             </div>
             <div class="col-10 news-alert-banner">
                 <img id="news-alert-text-image" src="images/news_alert.png" alt="News Alert">
-                <img id="news-alert-image" src="images/newsAlertImg.png" alt="News alert image">
-                <div id="news-alert-text"> 
-                    Cu vizite în Rusia și toate fără rezultate! </br> 
-                    De ce Igor Dodon nu merită un </br>
-                    nou mandat la șefia statului
-                </div>
-                <img id="news-alert-image" src="images/newsAlertImg2.png" alt="News alert image 2">
-                <div id="news-alert-text"> 
-                    Vinerea neagră revine! Percheziții </br>
-                    în dosarul "fraudei bancare": </br>
-                    Sunt cel puțin șase reținuți!
-                </div>
+                <a href="#">
+                    <img id="news-alert-image" src="images/newsAlertImg.png" alt="News alert image">
+                    <div id="news-alert-text"> 
+                        Cu vizite în Rusia și toate fără rezultate! </br> 
+                        De ce Igor Dodon nu merită un </br>
+                        nou mandat la șefia statului
+                    </div>
+                </a>
+
+                <a href="#">
+                    <img id="news-alert-image" src="images/newsAlertImg2.png" alt="News alert image 2">
+                    <div id="news-alert-text"> 
+                        Vinerea neagră revine! Percheziții </br>
+                        în dosarul "fraudei bancare": </br>
+                        Sunt cel puțin șase reținuți!
+                    </div>
+                </a>
+
                 <div id="news-alert-nav-panel">
                     <span id="news-alert-left-arrow" class="icon">
                     </span>
@@ -187,8 +198,11 @@
         </div>
 
         <div class="row flex-row">
-            <div class="addblock col-10">
-                <img src="images/add2.png" alt="IKEA add.">
+            <div class="adblock col-10">
+                <a href="https://www.ikea.com/ro/ro/">
+                    <img src="images/add2.png" alt="IKEA add.">
+                </a>
+                <span class="close-icon icon"></span>
             </div>
         </div>
     </section>
@@ -231,5 +245,6 @@
             </div>
         </div>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
