Finished the template file

--- a/template.html
+++ b/template.html
@@ -231,6 +231,115 @@
             </div>
         </div>
     </header>
+    
+    <section class="banners">
+        <div class="row flex-row breaking-news-banner-row">
+            <div class="col-10 breaking-news-banner">
+                <img id="breaking-news-text-image" src="images/breaking_news.png" alt="Breaking news">
+                <a href="#">
+                    <img id="breaking-news-image" src="images/emergencyNewsImg.png" alt="Breaking news image">
+                    <div id="breaking-news-text"> CNESP urmează să decidă astăzi dacă interzice zborurile din Marea Britanie</div>
+                </a>
+                <span id="breaking-news-pretend-timer" class="icon"></span>
+            </div>
+            <div class="col-10 news-alert-banner">
+                <img id="news-alert-text-image" src="images/news_alert.png" alt="News Alert">
+                <a href="#">
+                    <img id="news-alert-image" src="images/newsAlertImg.png" alt="News alert image">
+                    <div id="news-alert-text"> 
+                        Cu vizite în Rusia și toate fără rezultate! </br> 
+                        De ce Igor Dodon nu merită un </br>
+                        nou mandat la șefia statului
+                    </div>
+                </a>
+
+                <a href="#">
+                    <img id="news-alert-image" src="images/newsAlertImg2.png" alt="News alert image 2">
+                    <div id="news-alert-text"> 
+                        Vinerea neagră revine! Percheziții </br>
+                        în dosarul "fraudei bancare": </br>
+                        Sunt cel puțin șase reținuți!
+                    </div>
+                </a>
+
+                <div id="news-alert-nav-panel">
+                    <span id="news-alert-left-arrow" class="icon">
+                    </span>
+                    <span id="news-alert-right-arrow" class="icon">
+                    </span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="headline-news">
+
+        <div class="row flex-row">
+
+            <div class="col-5 large-news-unit">
+                <div class="large-news-block">
+                    <img class="block-image" src="images/img1.png" alt="Scandalul Anabolizantelor">
+                    <div class="article-info">
+                        <div class="article-title">
+                            Pe lângă scandalul anabolizantelor, Ambasada</br>
+                            Moldovei la Moscova ar fi implicată și în alte "afaceri":</br>
+                            băuturi alcoolice și numere diplomatice</br>
+                        </div>
+                        <div class="article-brief">
+                            Lorem Ipsum is simply dummy text for printing and typesetting industry. Lorem </br>
+                            Ipsum has been the industry's standard dummy text ever since the 1500s. Text of the </br>
+                            printing and typesetting industry.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-5 small-news-unit">
+                <div class="row flex-row">
+                    <div class="col-6 small-news-block">
+                        <img class="block-image" src="images/img2.png" alt="Andrian Candu">
+                        <div class="article-title">
+                            Președintele Pro Moldova Andrian</br>
+                            Candu, susține un briefing de presă</br>
+                        </div>
+                    </div>
+                    <div class="col-6 small-news-block">
+                        <img class="block-image" src="images/img3.png" alt="Protest antiguvernare">
+                        <div class="article-title">
+                            Protest antiguvernare în PMAN</br>
+                            Live From Realitatea.md</br>
+                        </div>
+                    </div>
+                </div>
+                <div class="row flex-row">
+                    <div class="col-6 small-news-block">
+                        <img class="block-image" src="images/img4.png" alt="Maia Sandu">
+                        <div class="article-title">
+                            Maia Sandu anunță că a avut o întreve-
+                            dere cu Mitropolitul Vladimir. Mitropolia
+                            nu spune un cuvânt despre întrevedere
+                        </div>
+                    </div>
+                    <div class="col-6 small-news-block">
+                        <img class="block-image" src="images/img5.png" alt="Record negativ COVID-19">
+                        <div class="article-title">
+                            Un alt record negativ depășit de cazuri</br>
+                            noi de COVID-19! Moldova trece de 115 </br>
+                            mii de cazuri și 2.400 de decese </br>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row flex-row">
+            <div class="adblock col-10">
+                <a href="https://www.ikea.com/ro/ro/">
+                    <img src="images/add2.png" alt="IKEA add.">
+                </a>
+                <span class="close-icon icon"></span>
+            </div>
+        </div>
+    </section>
     <footer>
         <div class="row flex-row">
             <div class="col-10 flex-row">
