Added links for the articles in main.html and template.html

--- a/main.html
+++ b/main.html
@@ -277,7 +277,7 @@
         <div class="row flex-row">
 
             <div class="col-5 large-news-unit">
-                <div class="large-news-block">
+                <a href="#" class="large-news-block">
                     <img class="block-image" src="images/img1.png" alt="Scandalul Anabolizantelor">
                     <div class="article-info">
                         <div class="article-title">
@@ -291,42 +291,42 @@
                             printing and typesetting industry.
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-5 small-news-unit">
                 <div class="row flex-row">
-                    <div class="col-6 small-news-block">
+                    <a href="#" class="col-6 small-news-block">
                         <img class="block-image" src="images/img2.png" alt="Andrian Candu">
                         <div class="article-title">
                             Președintele Pro Moldova Andrian</br>
                             Candu, susține un briefing de presă</br>
                         </div>
-                    </div>
-                    <div class="col-6 small-news-block">
+                      </a>
+                    <a href="#" class="col-6 small-news-block">
                         <img class="block-image" src="images/img3.png" alt="Protest antiguvernare">
                         <div class="article-title">
                             Protest antiguvernare în PMAN</br>
                             Live From Realitatea.md</br>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="row flex-row">
-                    <div class="col-6 small-news-block">
+                    <a href="#" class="col-6 small-news-block">
                         <img class="block-image" src="images/img4.png" alt="Maia Sandu">
                         <div class="article-title">
                             Maia Sandu anunță că a avut o întreve-
                             dere cu Mitropolitul Vladimir. Mitropolia
                             nu spune un cuvânt despre întrevedere
                         </div>
-                    </div>
-                    <div class="col-6 small-news-block">
+                    </a>
+                    <a href="#" class="col-6 small-news-block">
                         <img class="block-image" src="images/img5.png" alt="Record negativ COVID-19">
                         <div class="article-title">
                             Un alt record negativ depășit de cazuri</br>
                             noi de COVID-19! Moldova trece de 115 </br>
                             mii de cazuri și 2.400 de decese </br>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
