Finished all the html for the front page & added css to the majority of the sections

--- a/template.html
+++ b/template.html
@@ -145,7 +145,7 @@
         <div class="row flex-row">
             <div class="adblock col-10">
                 <a href="https://www.mercedes-benz.md/ro/desktop/home.html">
-                    <img src="images/add1.png" alt="Mercedes Car add.">
+                    <img src="images/ad1.png" alt="Mercedes Car add.">
                     <div class="ad-title">
                         A double victory. One single reason
                     </div>
@@ -334,7 +334,7 @@
         <div class="row flex-row">
             <div class="adblock col-10">
                 <a href="https://www.ikea.com/ro/ro/">
-                    <img src="images/add2.png" alt="IKEA add.">
+                    <img src="images/ad2.png" alt="IKEA add.">
                 </a>
                 <span class="close-icon icon"></span>
             </div>
