Modified article image to not use mobile/non-mobile class in article.html

--- a/article.html
+++ b/article.html
@@ -370,14 +370,7 @@
                             02.12.2020  13:58
                         </div> 
                     </div>
-                </div>
-            </div>
-        </div>
-        <img id="main-article-image" class="mobile" src="images/articleImg.png" alt="Main article image.">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-lg-9">
-                    <img id="main-article-image" class="non-mobile" src="images/articleImg.png" alt="Main article image.">
+                    <img id="main-article-image" src="images/articleImg.png" alt="Main article image.">
                     <div class="container article-content">
                         <div class="row">
                             <div class="col-2 non-mobile">
@@ -480,7 +473,6 @@
                 </div>
             </div>
         </div>
-
     </section>
 
     <section class="recomandam">
@@ -637,36 +629,6 @@
                         </a>
                     </div>
                 </div>
-            </div>
-            <div class="col-12 mobile">
-                <a href="#" class="small-article">
-                    <img src="images/actualitateImg5.png" alt="Actualitate Image">
-                    <div class="article-title">
-                        economie<span class="article-title-dot icon"></span>
-                    </div>
-                    <div class="article-header">Vinerea neagră revine! Percheziții în dosarul "fraudei bancare": Sunt cel puțin șase reținuți.</div>
-                </a>
-                <a href="#" class="small-article">
-                    <img src="images/actualitateImg5.png" alt="Actualitate Image">
-                    <div class="article-title">
-                        economie<span class="article-title-dot icon"></span>
-                    </div>
-                    <div class="article-header">Vinerea neagră revine! Percheziții în dosarul "fraudei bancare": Sunt cel puțin șase reținuți.</div>
-                </a>
-                <a href="#" class="small-article">
-                    <img src="images/actualitateImg5.png" alt="Actualitate Image">
-                    <div class="article-title">
-                        economie<span class="article-title-dot icon"></span>
-                    </div>
-                    <div class="article-header">Vinerea neagră revine! Percheziții în dosarul "fraudei bancare": Sunt cel puțin șase reținuți.</div>
-                </a>
-                <a href="#" class="small-article">
-                    <img src="images/actualitateImg5.png" alt="Actualitate Image">
-                    <div class="article-title">
-                        economie<span class="article-title-dot icon"></span>
-                    </div>
-                    <div class="article-header">Vinerea neagră revine! Percheziții în dosarul "fraudei bancare": Sunt cel puțin șase reținuți.</div>
-                </a>
             </div>
         </div>
         <a href="#" class="call-to-action non-mobile">
