Added Kaufland ad banner.

--- a/article.html
+++ b/article.html
@@ -514,6 +514,14 @@
             </div>
         </div>
         <hr class="non-mobile">
+        <div class="row row-flex non-mobile">
+            <div class="adblock col-10">
+                <a href="https://www.ikea.com/ro/ro/">
+                    <img src="images/ad4.png" alt="IKEA add.">
+                </a>
+                <span class="close-icon icon"></span>
+            </div>
+        </div>
     </section>
 
     <section class="actualitate non-mobile">
