Added the mobile menu for all 3 pages

--- a/rlive/arhiva.html
+++ b/rlive/arhiva.html
@@ -19,6 +19,85 @@
     <title>Pagina principala</title>
   </head>
   <body>
+    <header class="mobile">
+        <div class="container">
+            <div class="row">
+                <div class="col-3 left-nav-mobile">
+                    <div class="icon menu-icon"></div>
+                </div> 
+                <div class="col-6 logo-col">
+                    <a href="#"><span class="logo hide-text"><h1>Rlive</h1></span></a>
+                </div>
+                <div class="col-3 right-nav-mobile">
+                    <span class="icon search-icon-header"></span>
+                </div>
+            </div>
+        </div>
+        <div class="search-box">
+            <input type="search" name="header-search" class="search-field"  id="header-search" placeholder="Search">
+            <button class="icon search-icon"></button>
+        </div>
+        <div class="menu">
+            <div class="header-replacement row">
+                <div class="col-3 left-nav-mobile">
+                    <div class="icon close-menu-icon"></div>
+                </div> 
+                <div class="col-6 logo-col">
+                    <a href="#"><span class="logo hide-text"><h1>Rlive</h1></span></a>
+                </div>
+                <div class="col-3 right-nav-mobile">
+                    <span class="icon search-icon-header"></span>
+                </div>
+            </div>
+            <div class="scrollable-menu container-fluid">
+                <div class="row row-flex menu-header">
+                    <div class="col-12 right-header-menu">
+                        <input type="search" name="header-search" class="search-field"  id="header-search" placeholder="Search">
+                        <button class="icon search-icon"></button>
+                    </div>
+                </div>
+                <div class="row row-flex menu-middle">
+                        <ul class="col-12">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Arhiva</a></li>
+                            <li class="live-block-sm">
+                                <a href="#">
+                                    Live <span class="icon live"></span>
+                                </a>
+                            </li>
+                            <li><a href="#">Agenda</a></li>
+                        </ul>
+                        <div class="col-12 row-flex menu-bottom">
+                            <ul class="contact-options">
+                                <li><a href="#" class="icon hide-text facebook">facebook</a></li>
+                                <li><a href="#" class="icon hide-text odnoklasniki">odnoklasniki</a></li>
+                                <li><a href="#" class="icon hide-text telegram">telegram</a></li>
+                                <li><a href="#" class="icon hide-text twitter">twitter</a></li>
+                                <li><a href="#" class="icon hide-text youtube">youtube</a></li>
+                            </ul>
+                            <ul class="additional">
+                                    <li>
+                                        <span class="icon hide-text weather-button">Vremea</span>
+                                    </li>
+                            </ul>
+                        </div>
+                        <div class="col-12 row-flex menu-footer left-nav-footer">
+                            <ul class="text-left-nav">
+                                <li><a href="#">Contacts</a></li>
+                                <li><a href="#">Cariere</a></li>
+                                <li><a href="#">Pub</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-12 row-flex menu-footer">
+                            <div class="copyright-text">
+                                Mollit reprehenderit sunt dolore est ex commodo mollit. Enim ullamco magna quis minim dolore veniam in. 
+                                Sunt culpa ullamco reprehenderit ut mollit ut minim. Sint quis dolor fugiat et.
+                            </div>    
+                        </div>
+                </div>
+            </div>
+        </div>
+    </header>
     <header class="non-mobile">
         <div class="container container-lg">
             <div class="row row-flex">
